// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceValidationSummary renders error icon when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Service validation result
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 error found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ServiceValidationSummary renders error icon when all components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Service validation result
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 error found
        </div>
        <div>
          2 warnings found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="error"
  />
</Tooltip>
`;

exports[`ServiceValidationSummary renders success icon when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Service validation result
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          No issues found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="correct"
  />
</Tooltip>
`;

exports[`ServiceValidationSummary renders warning icon when all components are valid 1`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Service validation result
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          1 warning found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;

exports[`ServiceValidationSummary renders warning icon when all components are valid 2`] = `
<Tooltip
  aria-label="Validations list"
  content={
    <React.Fragment>
      <Text
        component="p"
        style={
          Object {
            "textAlign": "left",
            "textEmphasis": "strong",
          }
        }
      >
        Service validation result
      </Text>
      <div
        className="fe0pf1n"
      >
        <div>
          2 warnings found
        </div>
      </div>
    </React.Fragment>
  }
  enableFlip={true}
  position="auto"
>
  <Validation
    severity="warning"
  />
</Tooltip>
`;
